--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     </header>
     <main>
       <section class="hero-section">
-        <div class="container">
-         <div class="section"> 
+        <div class="container"> 
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button"><span class="button-text">Замовити послугу<span></button></div>
         </div>
@@ -61,31 +60,29 @@
           <ul class="list list-features">
             <li class="item">
               <h3 class="features-title">Увага до деталей</h3>
-              <p class="desc">
+              <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="item">
               <h3 class="features-title">Пунктуальність</h3>
-              <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+              <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="item">
               <h3 class="features-title">Планування</h3>
-              <p class="desc">Так само консультація з широким активом значною мірою зумовлює.</p>
+              <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="item">
               <h3 class="features-title">Сучасні технології</h3>
-              <p class="desc">
+              <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
-          </div>
         </div>
       </section>
       <section class="development-section">
         <div class="container">
-          <div class="section">
             <h2 class="title developmen-title">Чим ми займаємося</h2>
           <ul class="list list-developmen">
             <li class="item"><img src="./images/1.jpg" alt="розробка програми" width="370" height="294" /></li>
@@ -101,12 +98,10 @@
               <img src="./images/3.jpg" alt="вибір кольору до дизайну" width="370" height="294" />
             </li>
           </ul>
-          </div>
         </div>
       </section>
       <section class="employee-section">
         <div class="container">
-          <div class="section">
           <h2 class="title employee-title">Наша команда</h2>
           <ul class="list list-employee">
             <li class="item">
@@ -158,7 +153,6 @@
               </div>
             </li>
           </ul>
-          </div>
         </div>
       </section>
     </main>
