--- a/portfolio.html
+++ b/portfolio.html
@@ -18,145 +18,163 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <div class="container flex-header">
-        <nav class="flex-nav">
-          <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
-          <ul class="list list-nav">
+    <header class="header-section">
+      <div class="container">
+        <div class="flex-header">
+          <nav class="flex-nav">
+            <a class="logo" href="./index.html"><span class="logo-cover">Web</span>Studio</a>
+            <ul class="list list-nav">
+              <li class="item">
+                <a class="link navigation-link" href="./index.html">Студія</a>
+              </li>
+              <li class="item">
+                <a class="link navigation-link this-page" href="./portfolio.html">Портфоліо</a>
+              </li>
+              <li class="item">
+                <a class="link navigation-link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="list list-contact">
             <li class="item">
-              <a class="link navigation-link" href="./index.html">Студія</a>
+              <a class="link top-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="item">
-              <a class="link navigation-link this-page" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li class="item">
-              <a class="link navigation-link" href="#">Контакти</a>
+              <a class="link top-contact" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
-        <ul class="list list-contact">
-          <li class="item">
-            <a class="link top-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="item">
-            <a class="link top-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
     <main>
       <section class="product-section">
         <div class="container">
-          <div class="section">
-            <h1 class="visually-hidden">Портфоліо Web Studio</h1>
-            <ul class="list list-botton">
-              <li class="item"><button class="button" type="button">Усі</button></li>
-              <li class="item"><button class="button" type="button">Веб-сайти</button></li>
-              <li class="item"><button class="button" type="button">Додатки</button></li>
-              <li class="item"><button class="button" type="button">Дизайн</button></li>
-              <li class="item"><button class="button" type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="list product-card">
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/8.jpg"
-                    alt="Ноутбук на білому тлі, на екрані якого відкрита веб-сайт"
-                    width="370"
-                    height="294"
-                  />
+          <h1 class="visually-hidden">Портфоліо Web Studio</h1>
+          <ul class="list list-botton">
+            <li class="item"><button class="button" type="button">Усі</button></li>
+            <li class="item"><button class="button" type="button">Веб-сайти</button></li>
+            <li class="item"><button class="button" type="button">Додатки</button></li>
+            <li class="item"><button class="button" type="button">Дизайн</button></li>
+            <li class="item"><button class="button" type="button">Маркетинг</button></li>
+          </ul>
+          <ul class="list product-card">
+            <li class="item">
+              <a class="product-link" href="">
+                <img
+                  src="./images/8.jpg"
+                  alt="Ноутбук на білому тлі, на екрані якого відкрита веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Технокряк</h2>
-                  <span class="product-text">Веб-сайт</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/9.jpg"
-                    alt="Два хлопця грають у баскетбол"
-                    width="370"
-                    height="294"
-                  />
+                  <span class="product-span">Веб-сайт</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img
+                  src="./images/9.jpg"
+                  alt="Два хлопця грають у баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
-                  <span class="product-text">Дизайн</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/10.jpg"
-                    alt="Напис The Seafood на задньому твір якої розташована риба"
-                    width="370"
-                    height="294"
-                  />
+                  <span class="product-span">Дизайн</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img
+                  src="./images/10.jpg"
+                  alt="Напис The Seafood на задньому твір якої розташована риба"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Ресторан Seafood</h2>
-                  <span class="product-text">Додаток</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/11.jpg"
-                    alt="Бездротові навушники на білому тлі"
-                    width="370"
-                    height="294"
-                  />
+                  <span class="product-span">Додаток</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-span" href="">
+                <img
+                  src="./images/11.jpg"
+                  alt="Бездротові навушники на білому тлі"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Проєкт Prime</h2>
-                  <span class="product-text">Маркетинг</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img src="./images/12.jpg" alt="Напис Lab el tag" width="370" height="294" />
+                  <span class="product-span">Маркетинг</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img src="./images/12.jpg" alt="Напис Lab el tag" width="370" height="294" />
+                <div class="product-text">
                   <h2 class="product-title">Проєкт Boxes</h2>
-                  <span class="product-text">Додаток</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/13.jpg"
-                    alt="Дві коробки на білому тлі"
-                    width="370"
-                    height="294"
-                  />
+                  <span class="product-span">Додаток</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img
+                  src="./images/13.jpg"
+                  alt="Дві коробки на білому тлі"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Inspiration has no Borders</h2>
-                  <span class="product-text">Веб-сайт</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/14.jpg"
-                    alt="Комп'ютер із відкритим додатком"
-                    width="370"
-                    height="294"
-                  />
+                  <span class="product-span">Веб-сайт</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img
+                  src="./images/14.jpg"
+                  alt="Комп'ютер із відкритим додатком"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Видання Limited Edition</h2>
-                  <span class="product-text">Дизайн</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img src="./images/15.jpg" alt="Книжка на білому тлі" width="370" height="294" />
+                  <span class="product-span">Дизайн</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img src="./images/15.jpg" alt="Книжка на білому тлі" width="370" height="294" />
+                <div class="product-text">
                   <h2 class="product-title">Проєкт LAB</h2>
-                  <span class="product-text">Маркетинг</span>
-                </a>
-              </li>
-              <li class="item">
-                <a class="product-link" href="">
-                  <img
-                    src="./images/16.jpg"
-                    alt="Робочий стіл на якому розташовані рюкзак, аркуші паперу та ноутбук, у якому відкрито веб-сторінку"
-                    width="370"
-                    height="294"
-                  />
+                  <span class="product-span">Маркетинг</span>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a class="product-link" href="">
+                <img
+                  src="./images/16.jpg"
+                  alt="Робочий стіл на якому розташовані рюкзак, аркуші паперу та ноутбук, у якому відкрито веб-сторінку"
+                  width="370"
+                  height="294"
+                />
+                <div class="product-text">
                   <h2 class="product-title">Growing Business</h2>
-                  <span class="product-text">Додаток</span>
-                </a>
-              </li>
-            </ul>
-          </div>
+                  <span class="product-span">Додаток</span>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
